Comments done. Date sorted and comments for last 24 hours done

--- a/templates/product/product_detail.html
+++ b/templates/product/product_detail.html
@@ -12,9 +12,14 @@
     <div class="container">
 
   {% include 'include/navbar.html' with active_tab='products' %}
-
-    {{ product }}
-
+    {% for message in messages %}
+  <div class="alert {{ message.tags }} alert-dismissible" role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    {{ message }}
+  </div>
+{% endfor %}
 
 
       <div class="row">
@@ -44,16 +49,16 @@
               Product Reviews
             </div>
             <div class="card-body">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
-              <small class="text-muted">Posted by Anonymous on 3/1/17</small>
+              {% for comment in comments %}
+              <p>{{ comment.text }}</p>
+              <small class="text-muted">Posted by {{ comment.author }} on {{ comment.created_at }}</small>
               <hr>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
-              <small class="text-muted">Posted by Anonymous on 3/1/17</small>
-              <hr>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
-              <small class="text-muted">Posted by Anonymous on 3/1/17</small>
-              <hr>
-              <a href="#" class="btn btn-success">Leave a Review</a>
+              {% endfor %}
+            <form method="post">
+            {{ form.as_p }}
+                {% csrf_token %}
+              <input type="submit" class="btn btn-success" value="Leave a Review">
+            </form>
             </div>
           </div>
           <!-- /.card -->
