--- a/templates/include/navbar.html
+++ b/templates/include/navbar.html
@@ -1,18 +1,23 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Start Bootstrap</a>
+        <a class="navbar-brand" href="{% url 'product:main' %}">Start Bootstrap</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item{% if active_tab == 'main' %} active{% endif %}">
-              <a class="nav-link" href="#">Main
+              <a class="nav-link" href="{% url 'product:main' %}">Main
               </a>
             </li>
             <li class="nav-item{% if active_tab == 'products' %} active{% endif %}">
-              <a class="nav-link" href="#">Products</a>
+              <a class="nav-link" href="{% url 'product:products_list' %}">Products</a>
             </li>
+          {% if user.is_authenticated %}
+              <li class="nav-item" ><a class="nav-link" href="{% url 'logout' %}" ><span>Logout</span></a></li>
+          {% else %}
+			<li class="nav-item" ><a class="nav-link" href="{% url 'login' %}" ><span>Login</span></a></li>
+          {% endif %}
           </ul>
         </div>
       </div>
